[gd_scene load_steps=5 format=3 uid="uid://c6ba6x5w0xqnj"]

[ext_resource type="Script" uid="uid://msxojpd5tm2p" path="res://gui/roll_editor_panel/roll_editor_panel.gd" id="1_r5epf"]
[ext_resource type="PackedScene" uid="uid://75v4cht4q0pg" path="res://gui/roll_editor_panel/roll_editor_row.tscn" id="2_jwxmt"]
[ext_resource type="Texture2D" uid="uid://cfb7vwc146xl1" path="res://gui/icons/pencil.png" id="3_ps7ow"]
[ext_resource type="Texture2D" uid="uid://bxq3rhkyuusyw" path="res://gui/icons/x.png" id="4_2q3sb"]

[node name="roll_editor_panel" type="PanelContainer"]
anchors_preset = -1
anchor_left = 0.320833
anchor_top = 0.682375
anchor_right = 0.80625
anchor_bottom = 0.95625
offset_top = 0.280273
offset_right = -8.00003
offset_bottom = 10.0
script = ExtResource("1_r5epf")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="table" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="roll_editor_row" parent="VBoxContainer/ScrollContainer/table" instance=ExtResource("2_jwxmt")]
layout_mode = 2

[node name="roll_editor_row2" parent="VBoxContainer/ScrollContainer/table" instance=ExtResource("2_jwxmt")]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="invisible_separator2" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.74

[node name="plus" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "+"

[node name="addend_spinbox" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
min_value = -999.0
max_value = 999.0
rounded = true

[node name="invisible_separator" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="edit_score_addend_button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Write this addend to the current score"
icon = ExtResource("3_ps7ow")

[node name="clear_button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Clear roll editor"
icon = ExtResource("4_2q3sb")

[connection signal="value_changed" from="VBoxContainer/HBoxContainer/addend_spinbox" to="." method="_on_addend_spinbox_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/edit_score_addend_button" to="." method="_on_edit_score_addend_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/clear_button" to="." method="_on_clear_button_pressed"]
